src/main/java/com/example/demo/global/error/exception/CustomPresentationException.java
package com.example.demo.global.error.exception;

// controller - service - presentation(예외 발생)
public class CustomPresentationException extends BaseException{
}
